// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateListItem should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200 false"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fLVAbv"
            data-testid="Avatar"
          >
            <div
              class="overflow-hidden rounded-full"
            >
              <img
                alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200 false"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fLVAbv"
            data-testid="Avatar"
          >
            <div
              class="overflow-hidden rounded-full"
            >
              <img
                alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm ddJBbC"
              color="primary"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateListItem should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200 bg-theme-success-100"
      >
        <td
          class="py-5"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fLVAbv"
            data-testid="Avatar"
          >
            <div
              class="overflow-hidden rounded-full"
            >
              <img
                alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
              />
            </div>
          </div>
        </td>
        <td
          class="py-5 font-bold"
        >
          Delegate 1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          #1
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          3.43%
        </td>
        <td
          class="py-5"
        >
          <div
            class="flex justify-center h-full"
          >
            <a
              href="https://marketsquare.ark.io"
              rel="noreferrer"
              target="_blank"
            >
              <div
                class="sc-AxirZ iQaTP text-xl text-theme-primary"
                height="1em"
                width="1em"
              >
                <svg>
                  msq.svg
                </svg>
              </div>
            </a>
          </div>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            80%
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            Daily
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            500 Ѧ
          </span>
        </td>
        <td
          class="py-5 font-bold text-theme-neutral-dark"
        >
          <span>
            2.387082496 Ѧ
          </span>
        </td>
        <td
          class="py-5"
        >
          <div
            class="text-right"
          >
            <button
              class="sc-AxjAm bxcsTZ"
              color="danger"
              data-testid="DelegateListItem__button--toggle"
              type="button"
            >
              Unselect
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
